--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  
   <!-- Breadcroumbs start -->
   <div class="wshipping-content-block wshipping-breadcroumb inner-bg-1">
     <div class="container">
@@ -13,9 +15,12 @@
       </div>
     </div>
   </div>
+<%= render "devise/shared/error_messages", resource: resource %>
+
   <!-- Breadcroumbs end -->
   <!-- Customer Registration Start -->
-  <div class="wshipping-content-block">
+
+  <div class="wshipping-content-block">  
     <div class="container">
       <div class="customer-login">
         <div class="row">
@@ -25,8 +30,9 @@
                 <i class="fa fa-unlock-alt"></i>
               </div>
               <h4>Welcome To new account</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              <a href="#/work/themeforest/w-shipping/customer-register#">If you have account already, please login in</a>
+              <p>Canadian multinational conglomerate holding company focused on transportation, 
+              e-commerce and services based in Memphis, Tennessee.</p>
+              <a href="#">Already have an account, Login</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-6">
@@ -48,8 +54,8 @@
                 <div class="form-group">
                   <div class="row">
                     <div class="col-12 col-md-6 col-lg-6">
-                      <label>Email:</label>
-                      <input type="email" class="form-control" name="email">
+                      <%= f.label :email %>
+                      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                       <label>Phone:</label>
@@ -60,16 +66,19 @@
                 <div class="form-group">
                   <div class="row">
                     <div class="col-12 col-md-6 col-lg-6">
-                      <label>Password:</label>
-                      <input type="password" class="form-control" name="pass">
+                      <%= f.label :password %>
+                        <% if @minimum_password_length %>
+                        <em>(<%= @minimum_password_length %> characters minimum)</em>
+                        <% end %>
+                      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                      <label>Confirm Password:</label>
-                      <input type="password" class="form-control" name="cpass">
+                      <%= f.label :password_confirmation %>
+                      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
                     </div>
                   </div>
                 </div>
-                <button type="submit" class="btn btn-submit">Registration</button>
+                <%= f.submit "Registration", class: "btn btn-submit btn-danger" %>
               </form>
             </div>
           </div>
@@ -78,3 +87,7 @@
     </div>
   </div>
   <!-- Customer Registration end -->
+
+<% end %>
+
+<%= render "devise/shared/links" %>
