--- a/app/views/page/shipment_history.html.erb
+++ b/app/views/page/shipment_history.html.erb
@@ -1,180 +1,223 @@
 <!-- Breadcroumbs start -->
-  <div class="wshipping-content-block wshipping-breadcroumb inner-bg-1">
-    <div class="container">
-      <div class="row">
-         <div class="col-12 col-lg-7">
-            <h1>Shipment History</h1>
-            <a href="#" title="Home">Home</a> / Shipment History
-         </div>
-         <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
-The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
+<div class="wshipping-content-block wshipping-breadcroumb inner-bg-1">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-7">
+        <h1>Shipment History</h1>
+        <a href="#" title="Home">Home</a> / Shipment History
+      </div>
+      <div class="col-12 col-lg-5 text-right">
+        <h4>We freight to all over the world The best logistic company, <span>FAST</span> and <span>SAFELY!</span>
+        </h4>
       </div>
     </div>
   </div>
-  <!-- Breadcroumbs end -->
-
-  <!-- Shipment History start -->
-  <div class="wshipping-content-block">
-    <div class="container">
-      <div class="row">
-         <div class="col-12 col-lg-9">
-            <div class="order-list">
-              <h3>Your Shipment History</h3>
-              <div class="table-responsive">
-               <table class="table">
-                <thead>
-                  <tr>
-                    <th>SL</th>
-                    <th>SKU#</th>
-                    <th>Product Name</th>
-                    <th>Qty</th>
-                    <th>Wt</th>
-                    <th>Tax</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>U5-ZPSC-65F2</td>
-                    <td>The point of using Lorem Ipsum is that </td>
-                    <td>2</td>
-                    <td>10kg</td>
-                    <td>Y</td>
-                    <td>Processing</td>
-                    <td><a href="#/work/themeforest/w-shipping/shipment-history" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>U5-ZP3C-65F3</td>
-                    <td>The point of using Lorem Ipsum is that </td>
-                    <td>2</td>
-                    <td>10kg</td>
-                    <td>Y</td>
-                    <td>Confirm</td>
-                    <td><a href="#/work/themeforest/w-shipping/shipment-history" title=""><i class="far fa-trash-alt"></i></a></td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>U5-ZP4C-65F4</td>
-                    <td>The point of using Lorem Ipsum is that </td>
-                    <td>2</td>
-                    <td>10kg</td>
-                    <td>Y</td>
-                    <td>Processing</td>
-                    <td><a href="#/work/themeforest/w-shipping/shipment-history" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
-                  </tr>
-                  <tr>
-                    <td>4</td>
-                    <td>U5-ZPSC-65F2</td>
-                    <td>The point of using Lorem Ipsum is that </td>
-                    <td>2</td>
-                    <td>10kg</td>
-                    <td>Y</td>
-                    <td>Processing</td>
-                    <td><a href="#/work/themeforest/w-shipping/shipment-history" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
-                  </tr>
-                  <tr>
-                    <td>5</td>
-                    <td>U5-ZP3C-65F3</td>
-                    <td>The point of using Lorem Ipsum is that </td>
-                    <td>2</td>
-                    <td>10kg</td>
-                    <td>Y</td>
-                    <td>Confirm</td>
-                    <td><a href="#/work/themeforest/w-shipping/shipment-history" title=""><i class="far fa-trash-alt"></i></a></td>
-                  </tr>
-                  <tr>
-                    <td>6</td>
-                    <td>U5-ZP4C-65F4</td>
-                    <td>The point of using Lorem Ipsum is that </td>
-                    <td>2</td>
-                    <td>10kg</td>
-                    <td>Y</td>
-                    <td>Processing</td>
-                    <td><a href="#/work/themeforest/w-shipping/shipment-history" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
-                  </tr>
-                </tbody>
-              </table>
-             </div>
-           </div>
-         </div>
-         <!-- Right sidebar start -->
-         <div class="col-12 col-lg-3">
-            <div class="right-block left-menu menu-with-title mt60 mb15">
-               <h4 class="title-with-bg">Select Your Freight</h4>
-               <ul>
-                  <li class="active"><a href="#/work/themeforest/w-shipping/shipment-history" title="Air Freight Tracking">Air Freight Tracking</a></li>
-                  <li><a href="#/work/themeforest/w-shipping/shipment-history" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
-                  <li><a href="#/work/themeforest/w-shipping/shipment-history" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
-               </ul>
-            </div>
-               <a href="#/work/themeforest/w-shipping/shipment-history#" class="order-list-button">Your Order List</a>
-         </div>
-         <!-- Right sidebar end -->
+</div>
+<!-- Breadcroumbs end -->
+<!-- Shipment History start -->
+<div class="wshipping-content-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-9">
+        <div class="order-list">
+          <h3>Your Shipment History</h3>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>SL</th>
+                  <th>SKU#</th>
+                  <th>Product Name</th>
+                  <th>Qty</th>
+                  <th>Wt</th>
+                  <th>Tax</th>
+                  <th>Status</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>U5-ZPSC-65F2</td>
+                  <td>The point of using Lorem Ipsum is that </td>
+                  <td>2</td>
+                  <td>10kg</td>
+                  <td>Y</td>
+                  <td>Processing</td>
+                  <td>
+                    <a href="#/work/themeforest/w-shipping/shipment-history" title="">
+                      <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>U5-ZP3C-65F3</td>
+                  <td>The point of using Lorem Ipsum is that </td>
+                  <td>2</td>
+                  <td>10kg</td>
+                  <td>Y</td>
+                  <td>Confirm</td>
+                  <td>
+                    <a href="#/work/themeforest/w-shipping/shipment-history" title="">
+                      <i class="far fa-trash-alt"></i>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>U5-ZP4C-65F4</td>
+                  <td>The point of using Lorem Ipsum is that </td>
+                  <td>2</td>
+                  <td>10kg</td>
+                  <td>Y</td>
+                  <td>Processing</td>
+                  <td>
+                    <a href="#/work/themeforest/w-shipping/shipment-history" title="">
+                      <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>U5-ZPSC-65F2</td>
+                  <td>The point of using Lorem Ipsum is that </td>
+                  <td>2</td>
+                  <td>10kg</td>
+                  <td>Y</td>
+                  <td>Processing</td>
+                  <td>
+                    <a href="#/work/themeforest/w-shipping/shipment-history" title="">
+                      <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>5</td>
+                  <td>U5-ZP3C-65F3</td>
+                  <td>The point of using Lorem Ipsum is that </td>
+                  <td>2</td>
+                  <td>10kg</td>
+                  <td>Y</td>
+                  <td>Confirm</td>
+                  <td>
+                    <a href="#/work/themeforest/w-shipping/shipment-history" title="">
+                      <i class="far fa-trash-alt"></i>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>6</td>
+                  <td>U5-ZP4C-65F4</td>
+                  <td>The point of using Lorem Ipsum is that </td>
+                  <td>2</td>
+                  <td>10kg</td>
+                  <td>Y</td>
+                  <td>Processing</td>
+                  <td>
+                    <a href="#/work/themeforest/w-shipping/shipment-history" title="">
+                      <i class="fa fa-check-circle" aria-hidden="true"></i>
+                    </a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!-- Right sidebar start -->
+      <div class="col-12 col-lg-3">
+        <div class="right-block left-menu menu-with-title mt60 mb15">
+          <h4 class="title-with-bg">Select Your Freight</h4>
+          <ul>
+            <li class="active">
+              <a href="#/work/themeforest/w-shipping/shipment-history" title="Air Freight Tracking">Air Freight Tracking</a>
+            </li>
+            <li>
+              <a href="#/work/themeforest/w-shipping/shipment-history" title="Ocean Freight Tracking">Ocean Freight Tracking</a>
+            </li>
+            <li>
+              <a href="#/work/themeforest/w-shipping/shipment-history" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a>
+            </li>
+          </ul>
+        </div>
+        <a href="#/work/themeforest/w-shipping/shipment-history#" class="order-list-button">Your Order List</a>
+      </div>
+      <!-- Right sidebar end -->
+    </div>
+  </div>
+</div>
+<!-- Shipment History end -->
+<!-- Send free quote start -->
+<div class="wshipping-content-block get-quote">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-8">
+        <h4>We Are Always In Here, <span>Need any Help?</span>
+        </h4>
+      </div>
+      <div class="col-12 col-lg-4 text-right">
+        <a href="#/work/themeforest/w-shipping/contact.html" title="" class="wshipping-button">Contact With Us</a>
       </div>
     </div>
   </div>
-  <!-- Shipment History end -->
-
-  <!-- Send free quote start -->
-  <div class="wshipping-content-block get-quote">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-lg-8"><h4>We Are Always In Here, <span>Need any Help?</span></h4></div>
-        <div class="col-12 col-lg-4 text-right"><a href="#/work/themeforest/w-shipping/contact.html" title="" class="wshipping-button">Contact With Us</a></div>
+</div>
+<!-- Send free quote end -->
+<!-- Our Services Start -->
+<div class="wshipping-content-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-6 offset-lg-3">
+        <div class="section-title wow fadeInUp" style="visibility: hidden; animation-name: none;">
+          <h2>Our Services</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-lg-4">
+        <div class="single-service-item wow fadeInUp" style="visibility: hidden; animation-name: none;">
+          <div class="service-item-bg service-bg-1"></div>
+          <div class="service-content">
+            <h3>Ocean Freight Shipping</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+            <a href="#/work/themeforest/w-shipping/shipment-history" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i>
+            </a>
+            <div class="location_map">
+              <i class="fa fa-plus"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4">
+        <div class="single-service-item wow fadeInUp" style="visibility: hidden; animation-name: none;">
+          <div class="service-item-bg service-bg-2"></div>
+          <div class="service-content">
+            <h3>Air Freight Shipping</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+            <a href="#/work/themeforest/w-shipping/shipment-history" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i>
+            </a>
+            <div class="location_map">
+              <i class="fa fa-plus"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4">
+        <div class="single-service-item wow fadeInUp" style="visibility: hidden; animation-name: none;">
+          <div class="service-item-bg service-bg-3"></div>
+          <div class="service-content">
+            <h3>Car Shipping</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+            <a href="#/work/themeforest/w-shipping/shipment-history" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i>
+            </a>
+            <div class="location_map">
+              <i class="fa fa-plus"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <!-- Send free quote end -->
-
-  <!-- Our Services Start -->
-  <div class="wshipping-content-block">
-    <div class="container">
-      <div class="row">
-         <div class="col-12 col-lg-6 offset-lg-3">
-            <div class="section-title wow fadeInUp" style="visibility: hidden; animation-name: none;">
-               <h2>Our Services</h2>
-               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            </div>
-         </div>
-      </div>
-      <div class="row">
-         <div class="col-12 col-lg-4">
-            <div class="single-service-item wow fadeInUp" style="visibility: hidden; animation-name: none;">
-               <div class="service-item-bg service-bg-1"></div>
-               <div class="service-content">
-                  <h3>Ocean Freight Shipping</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="#/work/themeforest/w-shipping/shipment-history" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
-                  <div class="location_map"><i class="fa fa-plus"></i></div>
-               </div>
-            </div>
-         </div>
-         <div class="col-12 col-lg-4">
-            <div class="single-service-item wow fadeInUp" style="visibility: hidden; animation-name: none;">
-               <div class="service-item-bg service-bg-2"></div>
-               <div class="service-content">
-                  <h3>Air Freight Shipping</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="#/work/themeforest/w-shipping/shipment-history" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
-                  <div class="location_map"><i class="fa fa-plus"></i></div>
-               </div>
-            </div>
-         </div>
-         <div class="col-12 col-lg-4">
-            <div class="single-service-item wow fadeInUp" style="visibility: hidden; animation-name: none;">
-               <div class="service-item-bg service-bg-3"></div>
-               <div class="service-content">
-                  <h3>Car Shipping</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="#/work/themeforest/w-shipping/shipment-history" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
-                  <div class="location_map"><i class="fa fa-plus"></i></div>
-               </div>
-            </div>
-         </div>
-       </div>
-    </div>
-  </div>
-  <!-- Shipment History end -->
+</div>
+<!-- Shipment History end -->
